--- a/SpreadSheet-Communications-Protocol/demo.tex
+++ b/SpreadSheet-Communications-Protocol/demo.tex
@@ -53,7 +53,7 @@
 \setlength{\@fptop}{0pt}
 \makeatother
 
-\title{CS3505 - Multi-User Spreadsheet Desktop Application}
+\title{Communications Protocol Collaborative Spreadsheet}
 \author{Richard Timpson \and
         Jabrail Ahmed \and 
         Tyler Brewster \and 
@@ -209,18 +209,188 @@ data sent back and forth will be JSON.
         \end{figure}
             
 \section{Editing}
+\subsection{Overview}
+    The basic process for editing a cell is as follows: the client enters a value into a cell and
+    sends the cell’s information to the server. The server then checks to see if what the user
+    has entered is a valid edit or not. After the server authorizes that the user has submitted a 
+    valid edit, it sends that edit to all clients and records that edit. Figure \ref{fig:editUML} shows editing
+    the spreadsheet as a process of communications between the client and the server.
+
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=.9\linewidth]{3-1}
+        \caption{The editing diagram}
+        \label{fig:editUML}
+    \end{figure}
 \subsection{Generating a saved spreadsheet}
     The server first sends the function code 0 followed by a JSON array containing all of the active users. Next, the server sends all of the non-empty cells as basic edits, following which it will send the locations of all other users for the client to display.  
 
     This is an example of the start up message from the server to the client:
 
     \begin{lstlisting}[language=json,firstnumber=1]
+    0
+    [
+        {
+            "cell": "two characters i.e a1",
+            "users_active": ["userID1", "userID2", etc.],   
+            "change": "",
+            "value": "",     
+        },
+        {
+            "cell": "two characters i.e a1",
+            "users_active": ["userID1", "userID2", etc.],   
+            "change": "",
+            "value": "",     
+        },
+    ]
+    \end{lstlisting}
+\subsection{Basic Edit}
+    After the client makes an edit locally it will send that edit to the server. The
+    server will then validate the edit before sending that edit to all connected clients.
+    If the edit is invalid it will say “formula error” or send it back as an exception.
+    The server will also record this edit if it is not an exception. An example of a 
+    basic edit message from the client to the server:
+    \begin{lstlisting}[language=json,firstnumber=1]
+    1
     {
-        "cell": "two characters i.e a1",
-        "users_active": ["userID1", "userID2", etc.],        
-    }
+        "user_name": "user's name",
+        "cell": "A1",
+        "change": "=5+5",
+    }, 
+    \end{lstlisting}
+    And this is an example of a server to client message for basic edits:
+    \begin{lstlisting}[language=json,firstnumber=1]
+    2
+    {
+        "cell": "A1",
+        "users_active": "",
+        "change": "=5+5",
+        "value": "10",
+    }, 
+    \end{lstlisting}
+\subsection{Undo}
+    After an undo option is called, the server will go back one edit chronologically. This will 
+    NOT create a new edit. The latest edit will be deleted from record. This new change will
+     then show up on the clients.
+    \begin{itemize}
+        \item When undo is called on an unedited spreadsheet, the server doesn’t need to do anything.
+        \item A user should be able to call undo on a spreadsheet enough times to get it back to its original state (empty spreadsheet) from creation, regardless of the sheet being closed between creation and now. It is expected the server handles this functionality.
+    \end{itemize}
+    The following is an example of an undo request from client to the server:
+    \begin{lstlisting}[language=json,firstnumber=1]
+    2
+    {
+        "user_name": "users name",
+        "cell": "A1",
+        "change": ""// can also be seen as null,
+    }, 
+    \end{lstlisting}
+
+\subsection{Revert}
+    When the client calls for revert, the server will change the contents of the cell to its earlier
+    contents. This new edit will be counted as a new edit. This change will then be evaluated and sent out
+    as a normal edit.
+    \begin{itemize}
+        \item When revert is called on an unedited cell, the server doesn’t need to do anything.
+        \item A user should be able to call revert on a cell enough times to get it back to its original
+         state (empty cell) from creation, regardless of the sheet being closed between creation and now.
+         It is expected the server handles this functionality.
+    \end{itemize}
+    When to people are editing a cell at the same time, the first edit sent will be the first edit parsed and the second edit will override the first edit.
+    The following is an example of a revert request from the client to the server:
+    \begin{lstlisting}[language=json,firstnumber=1]
+    3
+    {
+        "user_name": "users name",
+        "cell": "A1",
+        "change": ""// can also be seen as null,
+    }, 
     \end{lstlisting}
     
+\subsection{Errors(Invalid Formulas)}
+    When invalid formula error occurs we will give a notification in the cell block that says
+     “Formula Error”. The following is an example message from the server to the clients:
+     \begin{lstlisting}[language=json,firstnumber=1]
+    3
+    {
+        "cell": "A1",
+        "users_active": "",
+        "change": "A1/+5"// can also be seen as null,
+        "value": "Formula Error: Formatting",
+    }, 
+    \end{lstlisting}
+\subsection{Exceptions(circular dependencies, divide by 0)}
+    Exceptions do not count as edits and are not sent to all users. When divide by zero error
+    occurs we give an exception to the user that entered the divide by zero exception. When
+    a circular dependency occurs we must give a exception to the user that entered the circular 
+    dependency to notify them of the exception. The following is an example message from the
+    server to the client:
 
+    \begin{lstlisting}[language=json,firstnumber=1]
+    4
+    {
+        "cell": "A1",
+        "users_active": "",
+        "change": "Exception"// can also be seen as null,
+        "value": "",
+    }, 
+    \end{lstlisting}
+
+\subsection{Saving}
+    When the client decides to save the current state of the spreadsheet the client should then 
+    send the server a request to save so the server can authenticate that there are no exceptions 
+    and then send the current state of the spreadsheet and save using a JSON objects. Also the 
+    spreadsheet should be saved so that when the server unexpectedly crashes and make sure that 
+    the last processed edit made by any user was saved.
+    \begin{lstlisting}[language=json,firstnumber=1]
+    5
+    {
+        "user_name": "users name",
+        "cell": "", // can also be seen as null,
+        "change": "" // can also be seen as null,
+    }, 
+    \end{lstlisting}
+
+\subsection{Data Transfer}
+    The following is the format of messages for our protocol. It follows the Json string format to
+    simplify communication. No compression is expected for ease of communication between languages. 
+    The following shows the expected format and fields with what the function number should be for 
+    different expected results. 
+
+    \subsubsection{Client to Server}
+        \centering
+        \begin{tabular}{| c | c | c |}
+            \hline 
+            Function Code & Course of Action & Value of Change\\ \hline
+            0 & Editor Location Changed & 0 \\
+            1 & Normal Cell Change & string \\
+            2 & Undo Request & 0 \\
+            3 & Revert Request & 0 \\
+            4 & Client Changes Sheet & 0 \\
+            5 & Save & 0 \\
+            \hline            
+        \end{tabular}
+    \subsubsection{Server to Client}
+        \begin{center}
+            \begin{tabular}{| c | c | c | c | c |}
+                \hline 
+                Function Code & Course of Action & Value of users active & Value of change & Value of value\\ \hline
+                0 & Start Setup & Array of current users & Null & Null \\
+                2 & Edit Cell & Null  & String input & Calculated Value \\
+                3 & Error & Null & String input & Formula Error \\
+                4 & Exception & Null & "EXCEPTION" & 0 \\
+                5 & Add/Remove Editor  & Array of current users & Null & Null \\
+                \hline            
+            \end{tabular}
+        \end{center}
+        \begin{center}
+            \begin{tabular}{| c | c | c | c |}
+                \hline 
+                Function Code & Course of Action & Cell  & UserName \\ \hline
+                1 & Change where someone is & Cell Number & User Number \\
+                \hline            
+            \end{tabular}    
+        \end{center}
+        
 \section{Conclusion}
 \end{document}
